# sqlite-zstd

./: .gitignore  BENCHMARKS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  KNOWN_ISSUES.md  README.md  deny.toml  test_extension.sql
.github/workflows/: bench.yml  ci.yml  release.yml
benches/: compression_bench.rs
examples/: basic_usage.rs  on_conflict.rs
src/: compression.rs  lib.rs
src/vtab/: conflict.rs  cursor.rs  mod.rs  zstd_vtab.rs
